app/frontend/app/globals.css
/* ... */
p {
  margin: 2px;
  color: var(--normal-text-color)
}

/* Center content regardless if scrollbar appears or not */
body {
  overflow-x: hidden;
  width: 100vw;
  margin-right: calc(100vw - 100%);
}

.bold-white-text {
  color: var(--bold-normal-text);
}

h1 {
  margin-top: 10px;
  margin-bottom: 12px !important;
}

h2, h3 {
  margin-bottom: 10px !important;
  word-break: normal;
}

h4 {
  margin-left: 2px;
  margin-bottom: 20px !important;
}

details {
  border-bottom: none;
  margin-bottom: 0;
  padding-bottom: 0;
}

input[type="checkbox"]:checked {
  background-color: #3279ec;
  border-color: #6cbdff;
}

/* Button to refresh page on error pages */
.error-button {
  max-width: fit-content;
  margin: auto;
  background-color: var(--dark-bg-color);
  font-size: larger;
  color:#ececec;
  padding: 5px 20px 10px;
  border: 2px solid rgba(233, 233, 233, 0.780);
  border-radius: 12px;
}

.error-button:hover {
  background-color: rgba(160, 160, 170, 0.380);
  color: white;
  border: 2px solid white;
}

/* Header for not-found page errors */
#error-header {
  position: absolute;
  top: 20%;
}

/* Main website container */
.container {
  padding-top: 0;
  padding-bottom: 20px;
}

@media (max-width: 576px) {
  .container {
    padding-left: 6px;
    padding-right: 6px;
  }
}

/* Horizontally centered container */
.centered-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Container for Navigation Bar */
.navbar-container {
  position: sticky;
  top: 0;
  z-index: 2;
  padding: 10px;
  justify-content: center;
  height: max-content;
  border-bottom: 1px solid rgba(223, 223, 223, 0.2);
  /* box-shadow: 0 5px 10px rgb(28, 28, 28); */
  background-color: rgb(26, 26, 26);
  background: linear-gradient(to bottom, rgb(26, 26, 26) 80%, rgb(36, 36, 36) 100%);
}

/* Wrapper for items in Navigation Bar */
.nav-items-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 0 !important;
}

/* Individual item in Navigation Bar */
.nav-item {
  color: rgb(245, 245, 245);
  border-radius: 1px;
  transition-duration: 0.15s;
}

.nav-item:hover {
  background-color: rgb(73, 73, 73);
}

/* SVG Home Icon in Navigation Bar */
#home-icon {
  padding: 10px 15px 1px;
}

/* Hamburger menu button (SVG) in Navigation Bar for smaller screens */
.nav-item-menu {
  all: initial;
  margin: 0;
  display: none;
  padding: 10px 20px;
  border-radius: 1px;
}

.nav-item-menu:focus {
  background-color: var(--primary-focus);
}

/* Wrapper for all items in Navigation Bar only visible for smaller screens */
.nav-small-wrapper {
  display: none;
  padding-right: 0px;
}

/* Start Price Scrape text in Navigation Bar */
.nav-item-start {
  color:#9dff70;
  font-weight: bold;
  white-space: nowrap;
}

/* Start Price Scrape text in Navigation Bar for smaller screens */
.nav-item-start-small {
  margin-right: 10px;
}

/* Drop down animation for hamburger menu in Navigation Bar */
@keyframes drop-down {
  from {
    transform: translateY(-50%) scaleY(0);
  }

  to {
    transform: translateY(0%) scaleY(1);
  }
}

/* Wrapper for hamburger menu content in Navigation Bar */
.nav-full-menu-wrapper {
  position: absolute;
  background-color: rgb(24, 24, 24);
  border: 1px solid rgb(59, 59, 59);
  border-bottom: none;
  right: -1px;
  box-shadow: -5px 5px 10px rgba(14, 14, 14, 1);
  animation: drop-down 0.25s;
}

/* List for all items in Navigation Bar hamburger menu */
.nav-full-menu {
  display: flow-root;
  margin: 0 !important;
}

/* Container for individual item in Navigation Bar hamburger menu */
.nav-full-menu-item {
  display: block;
  margin: 0 !important;
  padding: 8px 14px;
  font-size: 22px;
  font-weight: 500;
  white-space: nowrap;
  color: rgb(245, 245, 245);
  border-radius: 0;
  border-bottom: 1px solid rgb(59, 59, 59);
  transition-duration: 0.15s;
  background-color: rgb(26, 26, 26);
  background: linear-gradient(to bottom right, rgb(26, 26, 26) 40%, rgb(39, 39, 39) 100%);

}

.nav-full-menu-item:hover {
  background-color: rgb(48, 48, 48);
  background: linear-gradient(to bottom right, rgb(75, 75, 75) 40%, rgb(99, 99, 99) 100%);
}

/* Text for individual item in Navigation Bar hamburger menu */
.nav-full-menu-list-item {
  padding: 0;
}

/* Media query to change which items are shown in Navigation Bar for smaller screens */
@media (max-width: 1199px) {
  /* Hides the items in Navigation Bar seen on larger screens */
  .nav-item-extended {
    display: none;
  }

  /* Shows the hamburger menu instead */
  .nav-item-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .navbar-container {
    padding: 0;
  }
  .nav-item-start {
    font-size: 20px;
    font-weight: bold;
    padding: 10px;
  }
  .nav-item-start-small {
    font-size: 24px;
    padding: 6px 20px 8px;
  }
  .nav-small-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}

/* Generic styling for list with no dots for unordered lists */
.no-dot-list {
  list-style-type: none !important;
  margin: 0;
  padding: 0;
}

/* Generic styling for individual item in list with no dots */
.no-dot-list-item {
  list-style-type: none !important;
  margin: 0;
  padding: 0;
  margin-top: 6px;
}

/* <h1> title for the top of every page */
.page-title {
  background-color: #3978ff;
  background: -webkit-linear-gradient(#285aff, #8fd2ff);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Generic class to not display element */
.display-none {
  display: none;
}

/* Generic class to add nowrap */
.nowrap {
  white-space: nowrap;
}

/* Generic class to add normal word-break */
.word-break {
  word-break: normal;
}

/* Media query to disable nowrap and word-break classes for smaller screens */
@media (max-width: 800px){
  .nowrap {
    white-space: normal;
  }
  .word-break {
    word-break: break-all;
  }
}
/* ... */

